# ugckit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
.streamlit/: config.toml
config/: default.yaml
docs/: ARCHITECTURE.md  USAGE_RU.md
tests/: conftest.py  test_cli.py  test_composer.py  test_models.py  test_parser.py  test_pip_processor.py  test_subtitles.py  test_sync.py
ugckit/: __init__.py  cli.py  composer.py  config.py  models.py  parser.py  pip_processor.py  pipeline.py  subtitles.py  sync.py
ugckit/config/: default.yaml
workspace/: README.md
workspace/avatars/: .gitkeep
workspace/output/: .gitkeep
workspace/screencasts/: .gitkeep
workspace/scripts/: A1.md  A2.md
